aprendizajes del curso

--- a/Proyecto_financiera.qmd
+++ b/Proyecto_financiera.qmd
@@ -425,3 +425,7 @@ Se puede considerar viable que una opción tenga niveles más bajos en cuanto a 
 Fuente : https://portales.bancochile.cl/uploads/000/045/680/42b47795-da00-472d-93c7-323ce640b28f/original/Memoria_BCH_2022_interactiva-Optimizada.pdf
 
 Fuente : https://www.cmfchile.cl/portal/estadisticas/617/w3-propertyvalue-28914.html
+
+HITO 3 : Aprendizajes del curso
+
+De acuerdo a lo que se estudió y analizó durante el curso de gestión financiera, uno de los aprendizajes de mayor importancia tiene que ver con la importancia de cómo se manejan los activos financieros, como por ejemplo, los activos en el ámbito inmobiliario. Esto se logró evidenciar a lo largo del informe presentado anteriormente y los distintos puntos abarcados en él. Todo esto se logró aprender de acuerdo al comportamiento del activo financiero de la empresa Cencosud, y cómo este se ve afectado no solo por movimientos de la empresa sino que también, la manera en que el mercado afecta a la compañía y sus diversos activos. Por otro lado, se aprendió a identificar cómo se forma una estructura de financiamiento de una compañía incluyendo para esto el análisis de emisión de acciones y bonos y la comprensión de estos mecanismos y sus distintos propósitos. Lo anterior, se logró complementar mediante la utilización del modelo de Black-Scholes y el modelo binomial lo que me permitió mejorar mi capacidad de evaluar y tomar desiciones financieras en el ambiente relacionado a las inversiones. Finalmente, el caso analizado en base a la administración de efectivo de Braam Industries, nos permitió comprender diferentes perspectivas y prácticas para gestionar el efectivo de una empresa al igual que el estudio de los creditos que son fundamentales para entender y posteriormente trabajar en el área financiera como ingeniero civil industrial.
